--- a/secrets.yaml
+++ b/secrets.yaml
@@ -3,3 +3,7 @@
 sungrow_modbus_host_ip: 192.168.178.xxx # TODO update with the IP of your inverter. No default. Check your router.
 sungrow_modbus_port: 502 # TODO update with the Modbus port of your inverter. Default is '502'
 sungrow_modbus_slave: 1 #TODO update with the slave address of your inverter. Default is '1'
+
+sungrow_modbus_host_ip_2: 192.168.178.yyy # TODO update with the IP of your second inverter. No default. Check your router.
+sungrow_modbus_port_2: 502 # TODO update with the Modbus port of your second inverter. Default is '502'
+sungrow_modbus_slave_2: 2 #TODO update with the slave address of your second inverter. Default is '2'
