--- a/modbus_sungrow2.yaml
+++ b/modbus_sungrow2.yaml
@@ -1,7 +1,7 @@
 # Home Assistant Sungrow inverter integration
 # https://github.com/mkaiser/Sungrow-SHx-Inverter-Modbus-Home-Assistant
 # by Martin Kaiser
-# last update: 2024-04-05
+# last update: 2024-07-17
 #
 # Note: This YAML file will only work with Home Assistant >= 2023.10
 
@@ -1997,10 +1997,30 @@ template:
             SH8.0RT-V122
           {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E0B) %}
             SH10RT-V122
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E20) %}
+            SH5T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E21) %}
+            SH6T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E22) %}
+            SH8T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E23) %}
+            SH10T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E24) %}
+            SH12T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E25) %}
+            SH15T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E26) %}
+            SH20T-V11
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E28) %}
+            SH25T-V11
           {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0D0E) %}
             SH4.6RS 
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E26) %}
+            SH20T
+          {% elif ((states('sensor.sungrow_device_type_code_2') | int(default=0)) == 0x0E28) %}
+            SH25T
           {% else %}
-            Unknown device code!
+            Unknown device code: {{ '%0x' % (states('sensor.sungrow_device_type_code_2') | int(default=0))  }}
           {% endif %}
 
       # make the sensor battery_forced_charge_discharge_cmd more human readable
@@ -2331,6 +2351,10 @@ input_number:
     max: 5000 # change this value according to the capability of your battery
     step: 100
 
+  # This threshold is compared against the currently achievable charging power, not just against the currently available surplus.
+  # If this is set higher than the maximum charging power of the battery, charging will not start.
+  # If currently achievable charging power drops below this threshold, charging will stop. Actual charging power (limited by register 33047) is ignored.
+  # Charging might stop before reaching 100% if set too close to the maximum charging power of the battery, due to achievable charging power naturally dropping at high state of charge.
   set_sg_battery_charging_start_power_2:
     name: Set battery charging start power in W 2
     min: 0
